<resources>
    <string name="app_name">Threads Of Memory</string>
    <string name="app_name_short">TOM</string>

    <!--  common start -->
    <string name="add">添加</string>
    <string name="complete">完成</string>
    <string name="save">保存</string>
    <string name="no_more">没有更多</string>
    <string name="ok">好的</string>
    <string name="cancel">取消</string>
    <string name="warning">警告</string>
    <string name="sort">排序</string>

    <string name="difficulty_easy">简单</string>
    <string name="difficulty_medium">中等</string>
    <string name="difficulty_hard">困难</string>

    <string name="priority_low">低</string>
    <string name="priority_medium">中</string>
    <string name="priority_high">高</string>
    <!--  common end -->

    <!--  task start  -->
    <string name="task_title">任务标题</string>
    <string name="task_description">任务描述</string>
    <string name="add_task">添加任务</string>
    <string name="delete_task">删除任务</string>
    <string name="task_detail">任务详情</string>
    <string name="task_list">任务列表</string>
    <string name="complete_task">完成任务</string>
    <string name="remind_date">提醒日期</string>
    <string name="remind_time">提醒时间</string>
    <string name="next_remind">下次提醒</string>
    <string name="priority">优先级</string>
    <string name="create_date">创建日期</string>
    <!--  task end  -->

    <!--  flash card start  -->
    <string name="flashcard">闪卡</string>
    <string name="add_flash_group_title_hint">闪卡组标题</string>
    <string name="add_flash_group_description_hint">闪卡内容</string>
    <string name="flash_group_list">闪卡组列表</string>
    <string name="question">问题</string>
    <string name="answer">答案</string>
    <string name="add_flash_card">添加闪卡</string>
    <string name="show_answer">显示答案</string>"
    <string name="previous">上一个</string>
    <string name="next">下一个</string>
    <!--  flash card end  -->

    <string name="permission_rationale">精准闹钟理由</string>
    <string name="default_notification_content">Harry Up~</string>
</resources>