<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.flashcard.group.AddFlashGroupActivity">

        <EditText
            android:id="@+id/flash_group_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:hint="@string/add_flash_group_title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/flash_group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/add_flash_group_description_hint"
            app:layout_constraintEnd_toEndOf="@+id/flash_group_title"
            app:layout_constraintStart_toStartOf="@+id/flash_group_title"
            app:layout_constraintTop_toBottomOf="@+id/flash_group_title" />

        <Button
            android:id="@+id/save_flash_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/flash_group_title"
            app:layout_constraintStart_toStartOf="@+id/flash_group_title"
            app:layout_constraintTop_toBottomOf="@+id/flash_group_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
